--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,13 @@ license = "Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-jsonrpc = { version = "0.16", features = ["minreq_http"] }
+async-trait = "0.1"
+base64 = "0.21"
+jsonrpsee = { version = "0.20", features = ["client-core"] }
+jsonrpsee-http-client = "0.20"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+url = "2.3"
+
+[dev-dependencies]
+tokio = { version = "1.29", features = ["macros", "rt", "rt-multi-thread"] }
