--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ url = "2.3"
 
 [dev-dependencies]
 tokio = { version = "1.29", features = ["macros", "rt", "rt-multi-thread"] }
+tokio-test = "0.4"
